--- a/pb-auth/pb-auth.cabal
+++ b/pb-auth/pb-auth.cabal
@@ -19,6 +19,9 @@ executable pd-auth
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base >= 4  && < 5
+                     , yesod-core
+                     , redis
+                       
   hs-source-dirs:      src
   default-language:    Haskell2010
