--- a/pb-auth/pb-auth.cabal
+++ b/pb-auth/pb-auth.cabal
@@ -21,7 +21,7 @@ executable pd-auth
   -- other-extensions:    
   build-depends:       base >= 4  && < 5
                      , yesod-core
-                     , redis
+                     , hedis
                        
   hs-source-dirs:      src
   default-language:    Haskell2010
