--- a/pb-auth/pb-auth.cabal
+++ b/pb-auth/pb-auth.cabal
@@ -15,13 +15,19 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
-executable pd-auth
+executable pb-auth
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >= 4  && < 5
                      , yesod-core
-                     , hedis
+                     , hedis >= 0.9
+                     , text
+                     , bytestring >= 0.10
+                     , MonadRandom
+                     , aeson >= 1.2
+                     , resource-pool >= 0.2
+                     , time >= 1.8
                        
   hs-source-dirs:      src
   default-language:    Haskell2010
