--- a/pb-spider/pb-spider.cabal
+++ b/pb-spider/pb-spider.cabal
@@ -17,9 +17,10 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Spider.Book.Kind
+                       Spider.Book.Copy
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base >=4.9 && < 5
                      , HTTP >= 4000
                      , parsec >= 3.1
                      , text >= 1.2
@@ -27,5 +28,16 @@ library
                      , postgresql-simple >= 0.5
                      , time >= 1.8
                      , split >= 0.2
+                     , MonadRandom >= 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable pb-spider-book
+  hs-source-dirs:      src/app
+  main-is:             pb-spider-book.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.9 && < 5
+                     , pb-spider
+                     , cmdargs >= 0.10
+                     , postgresql-simple >= 0.5
+
