--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,8 @@ packages:
 - pb-auth
 - pb-logger
 - pb-spider
+- pb-isbn
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
